--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -1,377 +1,429 @@
 * {
-   box-sizing: border-box;
-   font-family: 'Microsoft JhengHei';
+  box-sizing: border-box;
+  font-family: 'Microsoft JhengHei';
 }
+
 body {
-   height: 100%;
-   margin: 0;
+  height: 100%;
+  margin: 0;
 }
+
 button,
 input,
 summary {
-   outline: none;
+  outline: none;
 }
+
 summary:hover {
-   opacity: 0.7;
+  opacity: 0.7;
 }
+
 /* ---- Header ---- */
 .main_header {
-   background-color: white;
-   position: fixed;
-   border-bottom: 1px solid #e9e9e9;
-   box-shadow: 0px 1px 2px 0 #f1f0f0;
-   margin: 0;
-   width: 100%;
-   height: 60px;
-   z-index: 1;
+  background-color: white;
+  position: fixed;
+  border-bottom: 1px solid #e9e9e9;
+  box-shadow: 0 1px 2px 0 #f1f0f0;
+  margin: 0;
+  width: 100%;
+  height: 60px;
+  z-index: 1;
 }
+
 .main_header > .container {
-   display: flex;
-   height: 100%;
-   max-width: 1000px;
-   margin: 0 auto;
+  display: flex;
+  height: 100%;
+  max-width: 1000px;
+  margin: 0 auto;
 }
+
 .main_header > .container > .box {
-   margin: auto 10px;
-   display: flex;
+  margin: auto 10px;
+  display: flex;
 }
+
 .main_header > .container > .box > .title {
-   font-size: 0.75rem;
-   display: flex;
-   color:#404040;
-   text-decoration: none;
+  font-size: 0.75rem;
+  display: flex;
+  color: #404040;
+  text-decoration: none;
 }
+
 .main_header > .container > .box > .title > .logo {
-   height: 20px;
-   width: 20px;
-   margin: auto 10px;  
+  height: 20px;
+  width: 20px;
+  margin: auto 10px;
 }
+
 .main_header > .container > .box > .search {
-   border: 1px solid #e9e9e9;
-   border-radius: 0.3rem 0 0 0.3rem;
-   width: 90px;
-   height: 35px;
-   padding: 0.5em;
-   font-size: 0.6rem;
+  border: 1px solid #e9e9e9;
+  border-radius: 0.3rem 0 0 0.3rem;
+  width: 90px;
+  height: 35px;
+  padding: 0.5em;
+  font-size: 0.6rem;
 }
+
 .main_header > .container > .box > .search_btn {
-   background: transparent;
-   border: 1px solid #e9e9e9;
-   border-radius: 0 0.3rem 0.3rem 0;
-   width: 35px;
-   cursor: pointer;
-   font-weight: 900;
+  background: transparent;
+  border: 1px solid #e9e9e9;
+  border-radius: 0 0.3rem 0.3rem 0;
+  width: 35px;
+  cursor: pointer;
+  font-weight: 900;
 }
+
 .main_header > .container > .box > .search_btn:hover {
-   background-color: rgb(238, 238, 238);
+  background-color: rgb(238, 238, 238);
 }
+
 .main_header > .container > .nav_bar {
-   flex:auto;
-   display:flex;
-   justify-content: end;
+  flex: auto;
+  display: flex;
+  justify-content: end;
 }
+
 .main_header > .container > .nav_bar > ul {
-   width: 170px;
-   padding: 0;
-   list-style: none;
-   margin: 0 0 0 auto; 
-   height: 60px;
+  width: 170px;
+  padding: 0;
+  list-style: none;
+  margin: 0 0 0 auto;
+  height: 60px;
 }
+
 .main_header > .container > .nav_bar > ul > a {
-   display: inline-block;
-   line-height: 60px;
-   padding: 0 5px;
+  display: inline-block;
+  line-height: 60px;
+  padding: 0 5px;
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
-.main_header > .container > .nav_bar > ul > a {
-   color: black;
-   text-decoration: none;
-   cursor: pointer;
-}
+
 .main_header > .container > .nav_bar > ul > a:hover {
-   background-color: transparent;
-   color: #919191;
+  background-color: transparent;
+  color: #919191;
 }
+
 .main_header > .container > .nav_bar > .menu {
-   max-height: 25px;
-   max-width: 25px;
-   margin: 10px 0 10px auto;
-   cursor: pointer;
+  max-height: 25px;
+  max-width: 25px;
+  margin: 10px 0 10px auto;
+  cursor: pointer;
 }
+
 .main_header > .container > .member_box {
-   margin-left: 0;
+  margin-left: 0;
 }
+
 .main_header > .container > .member_box > .member_btn {
-   padding: 0;
-   background-color: white;
-   border: none;
-   cursor: pointer;
+  padding: 0;
+  background-color: white;
+  border: none;
+  cursor: pointer;
 }
+
 .main_header > .container > .member_box > .member_btn > .member_logo {
-   max-width: 30px;
-   max-height: 30px;
+  max-width: 30px;
+  max-height: 30px;
 }
 
 /* ---- Member Modal ---- */
 .member_modal {
-   display: none; 
-   position: fixed;
-   z-index: 1; 
-   left: 0;
-   top: 0;
-   width: 100%; 
-   height: 100%; 
-   overflow: auto; 
-   background-color: rgba(0,0,0,0.4);
-   justify-content: center;
-   align-items: center;
- }
- .member_modal > .modal_content {
-   position: fixed;
-   background-color: lightgray;
-   max-height: 100%;
-   overflow: auto;
-   max-width: 300px;
-   display: flex;
- }
- .member_modal > .modal_content > .modal_container {
-   height: 100%;
-   flex: auto;
-   margin: 20px 20px 0 20px;
- }
- .member_modal > .modal_content > .modal_container > .nav {
-   width: 50%;
-   background: white;
-   float: left;
-   height: 35px;
-   line-height: 35px;
-   font-size: 1rem;
-   text-align: center;
-   cursor: pointer;
-   text-transform: uppercase;
- }
- .member_modal > .modal_content > .modal_container > .login {
-   background: none;
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+  justify-content: center;
+  align-items: center;
 }
- .member_modal > .modal_content > .modal_container > .form {
-   background: white;
-   padding: 20px 20px 0 ;
-   clear: both;
-   width: 100%;
-   box-sizing: border-box;
-   max-height: 450px;
- }
- .member_modal > .modal_content > .modal_container > .form > .input {
-   width: 100%;
-   padding: 10px;
-   box-sizing: border-box;
-   margin-bottom: 15px;
-   border: 2px solid #e9eaea;
-   color: #3e3e40;
-   font-size: 0.75rem;
-   outline: none;
- }
- .member_modal > .modal_content > .modal_container > .form > .input:focus {
-   border: 2px solid #919191;
- }
- .member_modal > .modal_content > .modal_container > .form > .btn {
-   border: none;
-   width: 100%;
-   background: #333;
-   height: 35px;
-   text-align: center;
-   line-height: 35px;
-   text-transform: uppercase;
-   color: #fff;
-   font-weight: bold;
-   letter-spacing: 1px;
-   cursor: pointer;
-   margin-bottom: 20px;
- }
- .member_modal > .modal_content > .modal_container > .form > .btn:hover {
-   background-color: #5a5a5a;
-   color: #f0f0f0;
- }
- .member_modal > .modal_content > .modal_container > .login-form {
-   display: none;
+
+.member_modal > .modal_content {
+  position: fixed;
+  background-color: lightgray;
+  max-height: 100%;
+  overflow: auto;
+  max-width: 300px;
+  display: flex;
 }
- .member_modal > .modal_content > .modal_container > .google_btn {
-   padding: 0;
-   height: 40px;
-   width: 250px;
-   background-color: white;
-   border: 0px;
-   border-radius: 5px;
-   margin: 20px 0;
-   display: block;
-   cursor: pointer;
- }
- .member_modal > .modal_content > .modal_container > .google_btn:hover,
- .member_modal > .modal_content > .modal_container > .fb_btn:hover {
-   opacity: 0.7;
- }
- .member_modal > .modal_content > .modal_container > .google_btn > .google_icon {
-   position: relative;
-   top: 3.5px;
-   height: 20px;
-   width: 20px;
- }
 
- .member_modal > .modal_content > .modal_container > .google_btn > p {
-   display: inline-block;
-   color: black;
-   font-size: 1rem;
-   line-height: 40px;
-   margin: 0 0 0 10px;
- }
- .member_modal > .modal_content > .modal_container > .fb_btn {
-   padding: 0;
-   height: 40px;
-   width: 250px;
-   background-color: #4267B2;
-   border: 0px;
-   border-radius: 5px;
-   margin: 20px 0;
-   display: block;
-   cursor: pointer;
- }
- .member_modal > .modal_content > .modal_container > .fb_btn > .fb_icon {
-   position: relative;
-   top: 3.5px;
-   height: 20px;
-   width: 20px;
- }
+.member_modal > .modal_content > .modal_container {
+  height: 100%;
+  flex: auto;
+  margin: 20px 20px 0 20px;
+}
 
- .member_modal > .modal_content > .modal_container > .fb_btn > p {
-   display: inline-block;
-   color: white;
-   font-size: 1rem;
-   line-height: 40px;
-   margin: 0 0 0 10px;
- }
- 
+.member_modal > .modal_content > .modal_container > .nav {
+  width: 50%;
+  background: white;
+  float: left;
+  height: 35px;
+  line-height: 35px;
+  font-size: 1rem;
+  text-align: center;
+  cursor: pointer;
+  text-transform: uppercase;
+}
 
+.member_modal > .modal_content > .modal_container > .login {
+  background: none;
+}
+
+.member_modal > .modal_content > .modal_container > .form {
+  background: white;
+  padding: 20px 20px 0;
+  clear: both;
+  width: 100%;
+  box-sizing: border-box;
+  max-height: 450px;
+}
+
+.member_modal > .modal_content > .modal_container > .form > .input {
+  width: 100%;
+  padding: 10px;
+  box-sizing: border-box;
+  margin-bottom: 15px;
+  border: 2px solid #e9eaea;
+  color: #3e3e40;
+  font-size: 0.75rem;
+  outline: none;
+}
+
+.member_modal > .modal_content > .modal_container > .form > .input:focus {
+  border: 2px solid #919191;
+}
+
+.member_modal > .modal_content > .modal_container > .form > .btn {
+  border: none;
+  width: 100%;
+  background: #333;
+  height: 35px;
+  text-align: center;
+  line-height: 35px;
+  text-transform: uppercase;
+  color: #fff;
+  font-weight: bold;
+  letter-spacing: 1px;
+  cursor: pointer;
+  margin-bottom: 20px;
+}
+
+.member_modal > .modal_content > .modal_container > .form > .btn:hover {
+  background-color: #5a5a5a;
+  color: #f0f0f0;
+}
+
+.member_modal > .modal_content > .modal_container > .login-form {
+  display: none;
+}
+
+.member_modal > .modal_content > .modal_container > .google_btn {
+  padding: 0;
+  height: 40px;
+  width: 250px;
+  background-color: white;
+  border: 0;
+  border-radius: 5px;
+  margin: 20px 0;
+  display: block;
+  cursor: pointer;
+}
+
+.member_modal > .modal_content > .modal_container > .google_btn > .google_icon {
+  position: relative;
+  top: 3.5px;
+  height: 20px;
+  width: 20px;
+}
+
+.member_modal > .modal_content > .modal_container > .google_btn > p {
+  display: inline-block;
+  color: black;
+  font-size: 1rem;
+  line-height: 40px;
+  margin: 0 0 0 10px;
+}
+
+.member_modal > .modal_content > .modal_container > .fb_btn {
+  padding: 0;
+  height: 40px;
+  width: 250px;
+  background-color: #4267b2;
+  border: 0;
+  border-radius: 5px;
+  margin: 20px 0;
+  display: block;
+  cursor: pointer;
+}
+
+.member_modal > .modal_content > .modal_container > .fb_btn > .fb_icon {
+  position: relative;
+  top: 3.5px;
+  height: 20px;
+  width: 20px;
+}
+
+.member_modal > .modal_content > .modal_container > .fb_btn > p {
+  display: inline-block;
+  color: white;
+  font-size: 1rem;
+  line-height: 40px;
+  margin: 0 0 0 10px;
+}
+
+.member_modal > .modal_content > .modal_container > .google_btn:hover,
+.member_modal > .modal_content > .modal_container > .fb_btn:hover {
+  opacity: 0.7;
+}
 
 /* ---- Footer ---- */
 .main_footer {
-   color: #EFEFEF;
-   background: #333;
-   margin: 0;
-   width: 100%;
-   height: auto;
-   padding: auto;
+  color: #efefef;
+  background: #333;
+  margin: 0;
+  width: 100%;
+  height: auto;
+  padding: auto;
 }
+
 .main_footer > .container_footer {
-   height: 100%;
-   display: flex;
-   flex-wrap: wrap;
-   max-width: 1000px;
-   padding: 10px 0;
-   margin: 0 auto;
+  height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 1000px;
+  padding: 10px 0;
+  margin: 0 auto;
 }
+
 .main_footer > .container_footer > .box_footer {
-   display: flex;
-   flex: 1 100%;
-   margin: 5px auto;
+  display: flex;
+  flex: 1 100%;
+  margin: 5px auto;
 }
+
 .main_footer > .container_footer > .box_footer > .logo_footer {
-   margin: 10px 10px 10px 20px;
-   height: 30px;
-   width: 30px;
+  margin: 10px 10px 10px 20px;
+  height: 30px;
+  width: 30px;
 }
+
 .main_footer > .container_footer > .box_footer > .title_footer > h3 {
-   font-weight: 500;
-   margin: 5px 0;
-   font-size: 1rem;
+  font-weight: 500;
+  margin: 5px 0;
+  font-size: 1rem;
 }
+
 .main_footer > .container_footer > .box_footer > .title_footer > h4 {
-   font-weight: 500;
-   margin: 5px 0;
-   font-size: 0.75rem;
+  font-weight: 500;
+  margin: 5px 0;
+  font-size: 0.75rem;
 }
+
 .main_footer > .container_footer > .copyright > h4 {
-   font-size: 0.75rem;
-   font-weight: 500;
-   margin: 0 20px;
-   line-height: 1.5rem;
+  font-size: 0.75rem;
+  font-weight: 500;
+  margin: 0 20px;
+  line-height: 1.5rem;
 }
+
 @media (max-width: 749px) {
-   .main_header > .container > .nav_bar > .menu,
-   .main_header > .container > .nav_bar > .show {
-      display: block;
-   }
-   .main_header > .container > .nav_bar > ul {
-      position: fixed;
-      width: 100px;
-      height: 160px;
-      background-color: white;
-      border-left: solid #919191 .5px;
-      border-right: solid  #919191 .5px;
-      border-bottom: solid  #919191 .5px;
-      top: 55px;
-      right: 55px;
-      padding: 0;
-      margin: 0;
-      display: none;
-   }
-   .main_header > .container > .nav_bar > ul > a {
-      line-height: 40px;
-      font-size: 1rem;
-      display: block;
-      text-align: center;
-      cursor: pointer;
-      text-decoration: none;
-      color: black;
-   }
-   .main_header > .container > .nav_bar > ul > a:hover {
-      background-color: lightblue;
-      color: black;
-   }
+  .main_header > .container > .nav_bar > .menu,
+  .main_header > .container > .nav_bar > .show {
+    display: block;
+  }
+
+  .main_header > .container > .nav_bar > ul {
+    position: fixed;
+    width: 100px;
+    height: 160px;
+    background-color: white;
+    border-left: solid #919191 0.5px;
+    border-right: solid  #919191 0.5px;
+    border-bottom: solid  #919191 0.5px;
+    top: 55px;
+    right: 55px;
+    padding: 0;
+    margin: 0;
+    display: none;
+  }
+
+  .main_header > .container > .nav_bar > ul > a {
+    line-height: 40px;
+    font-size: 1rem;
+    display: block;
+    text-align: center;
+    cursor: pointer;
+    text-decoration: none;
+    color: black;
+  }
+
+  .main_header > .container > .nav_bar > ul > a:hover {
+    background-color: lightblue;
+    color: black;
+  }
 }
+
 @media (min-width: 450px) {
-   .main_header > .container > .box > .title {
-      font-size: 1rem;
-   }
-   .main_header > .container > .box > .title > .logo {
-      height: 30px;
-      width: 30px;
-   }
-   .main_header > .container > .box > .search {
-      width: 150px;
-      font-size: 0.8rem;
-   }
-   .main_header > .container > .nav_bar > .menu {
-      max-height: 30px;
-      max-width: 30px;
-   }
-   .main_header > .container > .member_box > .member_btn > .member_logo {
-      max-width: 40px;
-      max-height: 40px;
-   }
-   .main_footer > .container_footer > .copyright > h4 {
-      font-size: 1em;
-      line-height: 2rem;
-   }
-   .main_footer > .container_footer > .box_footer > .title_footer > h3,
-   .main_footer > .container_footer > .box_footer > .title_footer > h4 {
-      font-size: 1em;
-   }
-   .main_footer > .container_footer > .box_footer > .logo_footer {
-      margin-right: 20px;
-      height: 40px;
-      width: 40px;
-   }
+  .main_header > .container > .box > .title {
+    font-size: 1rem;
+  }
+
+  .main_header > .container > .box > .title > .logo {
+    height: 30px;
+    width: 30px;
+  }
+
+  .main_header > .container > .box > .search {
+    width: 150px;
+    font-size: 0.8rem;
+  }
+
+  .main_header > .container > .nav_bar > .menu {
+    max-height: 30px;
+    max-width: 30px;
+  }
+
+  .main_header > .container > .member_box > .member_btn > .member_logo {
+    max-width: 40px;
+    max-height: 40px;
+  }
+
+  .main_footer > .container_footer > .copyright > h4 {
+    font-size: 1em;
+    line-height: 2rem;
+  }
+
+  .main_footer > .container_footer > .box_footer > .title_footer > h3,
+  .main_footer > .container_footer > .box_footer > .title_footer > h4 {
+    font-size: 1em;
+  }
+
+  .main_footer > .container_footer > .box_footer > .logo_footer {
+    margin-right: 20px;
+    height: 40px;
+    width: 40px;
+  }
 }
+
 @media (min-width: 750px) {
-   .main_header > .container > .nav_bar > .menu {
-      display: none;
-   }
-   .main_footer > .container_footer {
-      justify-content: flex-end;
-   }
-   .main_footer > .container_footer > .box_footer{
-      flex: auto;
-   }
-   .main_footer > .container_footer > .copyright > h4 {
-      margin: 0 15px 0 auto;
-   }
+  .main_header > .container > .nav_bar > .menu {
+    display: none;
+  }
+
+  .main_footer > .container_footer {
+    justify-content: flex-end;
+  }
+
+  .main_footer > .container_footer > .box_footer {
+    flex: auto;
+  }
+
+  .main_footer > .container_footer > .copyright > h4 {
+    margin: 0 15px 0 auto;
+  }
 }
