--- a/static/css/type.css
+++ b/static/css/type.css
@@ -1,74 +1,84 @@
 /* ---- Main ---- */
 
 main {
-   min-height: calc(100vh - 100px);
-   width: 100%;
-   height: 100%;
-   padding-top: 80px;
-   padding-bottom: 20px;
-   display: flex;
-   align-items: center;
+  min-height: calc(100vh - 100px);
+  width: 100%;
+  height: 100%;
+  padding-top: 80px;
+  padding-bottom: 20px;
+  display: flex;
+  align-items: center;
 }
+
 main > .view {
-   flex: auto;
-   max-width: 1000px;
-   margin: 0 auto;
-   display: flex;
-   flex-direction: column;
+  flex: auto;
+  max-width: 1000px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
 }
-main > .view > h2{
-   margin: 0 20px 10px;
-   flex: 1 100%;
-   font-size: 1.25rem;
-   color: #404040;
-   font-weight: 700;
-   padding-bottom: 6px;
-   border-bottom: 1px solid #e6e6e6;
+
+main > .view > h2 {
+  margin: 0 20px 10px;
+  flex: 1 100%;
+  font-size: 1.25rem;
+  color: #404040;
+  font-weight: 700;
+  padding-bottom: 6px;
+  border-bottom: 1px solid #e6e6e6;
 }
+
 main > .view > .products {
-   display: flex;
-   flex-wrap: wrap;
-   margin: 0 10px 10px;
-   flex: 1 100%;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 10px 10px;
+  flex: 1 100%;
 }
-main > .view > .products > .product{
-   display: flex;
-   flex-direction: column;
-   width: calc(50% - 20px);
-   margin: 10px;
-   border-radius: 0.3rem;
-   border: 1px solid #e9e9e9;
-   color: #5a5a5a;
-   background: #fff;
-   border-color: #e9e9e9;
-   text-decoration: none;
-   box-shadow: none;
-   transition: box-shadow .1s ease,transform .1s ease;
+
+main > .view > .products > .product {
+  display: flex;
+  flex-direction: column;
+  width: calc(50% - 20px);
+  margin: 10px;
+  border-radius: 0.3rem;
+  border: 1px solid #e9e9e9;
+  color: #5a5a5a;
+  background: #fff;
+  border-color: #e9e9e9;
+  text-decoration: none;
+  box-shadow: none;
+  transition: box-shadow 0.1s ease, transform 0.1s ease;
 }
-main > .view > .products > .product:hover{
-   box-shadow: 0px 5px 10px 0 #a19f9f;
+
+main > .view > .products > .product:hover {
+  box-shadow: 0 5px 10px 0 #a19f9f;
 }
-main > .view > .products > .product > img{
-   width: 100%;
+
+main > .view > .products > .product > img {
+  width: 100%;
 }
-main > .view > .products > .product > .name{
-   padding: 10px 10px 5px;
+
+main > .view > .products > .product > .name {
+  padding: 10px 10px 5px;
 }
-main > .view > .products > .product > .number{
-   padding: 0 10px 15px;
-   font-size: 0.8rem;
-   color: #919191;
+
+main > .view > .products > .product > .number {
+  padding: 0 10px 15px;
+  font-size: 0.8rem;
+  color: #919191;
 }
-main > .view > .products > .product > .price{
-   margin-top: auto;
-   height: 50px;
-   width: 100%;
-   padding: 15px;
-   text-align: center;
-   border-top: 1px solid rgba(0,0,0,0.05);
+
+main > .view > .products > .product > .price {
+  margin-top: auto;
+  height: 50px;
+  width: 100%;
+  padding: 15px;
+  text-align: center;
+  border-top: 1px solid rgba(0, 0, 0, 0.05);
 }
+
 @media (min-width: 750px) {
-   main > .view > .products > .product{
-      width: calc(25% - 20px);
-   }
+  main > .view > .products > .product {
+    width: calc(25% - 20px);
+  }
 }
